Bug 1168398 - Ensure that the presshell is initialized before attempting to scroll something into its view; r=enndeakin